fix: border overlap

--- a/app/assets/stylesheets/rankings/rankings.scss
+++ b/app/assets/stylesheets/rankings/rankings.scss
@@ -44,7 +44,7 @@
     position: absolute;
     transform: translateX(-50%);
     left:50%;
-    top: -3px;
+    top: -$border-stroke-width;
     pointer-events: none;
   }
 
